# playmove

./: .env.sample  .gitignore  Cargo.toml  README.md  cargo.toml  package.json  pnpm-lock.yaml  runner.sh
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  main.rs
crates/api/src/data/: code.rs  gist.rs  mod.rs
crates/api/src/helpers/: mod.rs  sandboxed.rs
docker/api/: Dockerfile  entry.sh
web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.mts
web/move-playground-component/: README.md  package.json  pnpm-lock.yaml  vite.config.mts
web/move-playground-component/src/: index.ts  main.tsx
web/move-playground-component/src/components/: MoveEditor.tsx  TerminalOutput.tsx
web/move-playground-component/src/icons/: FormatIcon.tsx  PlayIcon.tsx
web/move-playground-react/: README.md  package.json  tsconfig.json
web/move-playground-react/src/components/: MoveEditor.tsx
web/playmove-react/: .env.sample  index.html  mliolios-playmove-react-0.0.1.tgz  package.json  pnpm-lock.yaml  vite.config.mts
web/src/: App.tsx  main.tsx
web/src/components/: CopySidebar.tsx  MoveEditor.tsx  TerminalOutput.tsx
web/src/components/ui/: loading.tsx
web/src/hooks/: useGist.ts  useMediaQuery.ts  usePlaymoveApi.ts  useShare.ts
web/src/icons/: CheckIcon.tsx  CloseIcon.tsx  CopyIcon.tsx  DarkMode.tsx  FormatIcon.tsx  PlayIcon.tsx  TerminalIcon.tsx
web/src/lib/: colors.ts  shiki-highlighter.ts  utils.ts
web/web/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
web/web/src/: App.tsx  main.tsx
(+6 files in other folders)
