[package]
name = "playmove-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
thiserror = { workspace = true }
wait-timeout = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sanitize-filename = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

[[bin]]
name = "playmove-api"
path = "src/main.rs"
